--- a/CSS/style.css
+++ b/CSS/style.css
@@ -92,6 +92,7 @@ h5 {
     flex-direction: row;
     width: 440px;
     height: 50px;
+    margin-left:2px;
 }
 
 input {
@@ -121,7 +122,6 @@ input {
     display: flex;
     flex-direction: row;
     margin-bottom: 10px;
-    width: 90%;
 }
 
 #info {
@@ -135,20 +135,19 @@ input {
     display: flex;
     flex-direction: row;
     margin-left: 29px;
-    gap: 30px;
+    gap: 40px;
 }
 
     .liens-container-droit a {
         text-decoration: none;
         color: black;
-        margin-left: 5px;
     }
 
 .liens-container-gauche {
     display: flex;
     flex-direction: row;
     margin-left: 29px;
-    gap: 30px;
+    gap: 40px;
 }
 
     .liens-container-gauche a {
@@ -163,8 +162,6 @@ input {
     font-size: 18px;
     line-height: 21px;
     color: #000000;
-    margin-right: 12px;
-    margin-left: 10px;
 }
 
 .lien1, .lien2, .lien3 {
@@ -182,7 +179,6 @@ input {
     font-weight: 700;
     font-size: 17px;
     line-height: 20px;
-    margin-right: 10px;
     width: 30%;
 }
 
@@ -203,7 +199,7 @@ input {
     font-weight: 700;
     font-size: 17px;
     line-height: 20px;
-    width: 182px;
+    width: 190px;
 }
 
     .lien1:hover, .lien2:hover, .lien3:hover, .lien4:hover {
@@ -236,7 +232,7 @@ input {
     display: flex;
     flex-direction: column;
     width: 65%;
-    height: 650px;
+    height: 626px;
     border-radius: 15px;
     background: #F2F2F2;
     margin-top: 10px;
@@ -248,6 +244,7 @@ input {
     margin: 2.5%;
     width: 95%;
     gap: 20px;
+    margin-left:20px;
 }
 
 .hebergement-jaune {
@@ -276,6 +273,7 @@ input {
 .card-container {
     display: flex;
     flex-direction: column;
+    justify-content:space-around;
     font-weight: normal;
     margin-left: 14px;
     color: black;
@@ -312,6 +310,10 @@ input {
     font-size: 18px;
     line-height: 21px;
     margin-left: 24px;
+    margin-top:0px;
+}
+#next{
+    margin-top:0px;
 }
 
 .populaire-rouge {
@@ -320,7 +322,7 @@ input {
     align-items: center;
     border-radius: 15px;
     width: 30%;
-    height: 650px;
+    height: 625px;
     background: #F2F2F2;
 }
 
@@ -332,7 +334,7 @@ input {
     line-height: 26px;
     margin-top: 30px;
     margin-bottom: 16px;
-    margin-left: 3px;
+    margin-left: 21px;
 }
 
 .icone-populaire {
@@ -369,23 +371,22 @@ input {
     border: solid 2px white;
 }
 
-.populaire-jaune .card-populaire .card-container .nom {
+.populaire-jaune .card-populaire-desktop .card-container .nom {
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
-   /* margin: 13px 18px 5px 2px;*/
-    margin:0px;
+    margin: 0px;
     color: black;
 }
 
-.populaire-jaune .card-populaire .card-container .prix {
+.populaire-jaune .card-populaire-desktop .card-container .prix {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
-    margin: 0px 18px 37px 2px;
+    margin-right:18px;
     color: black;
 }
 
@@ -394,19 +395,19 @@ input {
     color: black;
 }
 
-.populaire-jaune .card-populaire .card-container .star-populaire {
+.populaire-jaune .card-populaire-desktop .card-container .star-populaire {
     display: flex;
     flex-direction: row;
     margin: 28px 18px 0px 2px;
 }
 
-.populaire-jaune .card-populaire .card-container .star-populaire-eau {
+.populaire-jaune .card-populaire-desktop .card-container .star-populaire-eau {
     display: flex;
     flex-direction: row;
     margin: 8px 18px 0px 2px;
 }
 
-.populaire-jaune .card-populaire .card-container .star-populaire-blanc {
+.populaire-jaune .card-populaire-desktop .card-container .star-populaire-blanc {
     display: flex;
     flex-direction: row;
     margin: 26px 18px 0px 2px;
@@ -431,6 +432,7 @@ input {
         border-radius: 15px 15px 0px 0px;
         width: 100%;
         height: 302px;
+        margin-left:16px;
         margin-bottom: 12px;
     }
 
@@ -451,9 +453,9 @@ input {
 footer {
     display: flex;
     flex-direction: row;
-    width: 90%;
+    width: 92%;
     padding-bottom: 10px;
-    background-color: #E6E6E6;
+    background-color: #F2F2F2;
     justify-content: space-around;
     margin-top: 40px;
     text-decoration: none;
@@ -484,6 +486,7 @@ footer {
         font-size: 16px;
         line-height: 19px;
         margin-top: 10px;
+        width:196px;
     }
 
 .assistance {
@@ -571,72 +574,30 @@ i.fa-solid.fa-location-dot.fa-lg {
         width: 100%;
     }
 
+    header {
+        width: 100%;
+    }
+
     nav {
         justify-content: start;
         margin: 0 0 0 0;
         gap: 30%;
+        width: 100%;
     }
-
-    footer {
-        width: 96%;
-        margin-left: 14px;
-    }
-
+   
     .filtre {
         margin-bottom: 0px;
         width: 100%;
+       /* gap:10px;*/
     }
 
-    .populaire-jaune .card-populaire .card-container .nom {
-        margin: 13px 14px 11px -6px;
+    .liens-container-gauche {
+        gap: 20px;
     }
 
-    .populaire-jaune .card-populaire .card-container .prix {
-        margin: 0px 13px 37px 2px;
-    }
-
-    .lien4 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        border-radius: 20px 20px 20px 20px;
-        color: blue;
-        height: 48px;
-        border: 1px solid #D9D9D9;
-        padding-left: 21px;
-        padding-right: 20px;
-        font-style: normal;
-        font-weight: 700;
-        font-size: 17px;
-        line-height: 20px;
-        width: 184px;
-    }
-
-    .groupe-lien {
-        width: 55%;
-    }
-
-
-    #lien-filtre {
-        justify-content: start;
-        width: 8%;
-    }
-
-    #info {
-        margin-bottom: 50px;
-    }
-
-    .activite .titre-activites {
-        margin-bottom: 40px;
-    }
-
-    .groupe-lien {
-        margin-bottom: 10px;
-    }
-
-    .hebergement-rouge {
-        gap: 2px;
+    .liens-container-droit {
+        gap: 20px;
+        margin-left:0px;
     }
 
     .hebergement-vert {
@@ -650,13 +611,20 @@ i.fa-solid.fa-location-dot.fa-lg {
         padding-bottom: 50px;
     }
 
+    .hebergement-rouge {
+        gap: 2px;
+    }
+
     .hebergement-jaune {
         margin-bottom: 10px;
     }
 
-    .main a {
-        margin-top: 10px;
-        width: 35%;
+    .card-container {
+        margin-bottom: 32px;
+    }
+
+    #next a {
+        margin-left: 20px;
     }
 
     .populaire-rouge {
@@ -665,45 +633,48 @@ i.fa-solid.fa-location-dot.fa-lg {
         height: 300px;
     }
 
+    .activite .titre-activites {
+        margin-bottom: 40px;
+    }
+
     .populaire-jaune {
-        display: flex;
         flex-direction: row;
         padding-bottom: 30px;
         width: 97%;
         margin-right: 14px;
     }
 
-    .Img-populaire {
-        width: 92px;
-    }
-
-    .card-container {
-        margin-bottom: 32px;
-    }
-
-    .card-populaire {
+    .card-populaire-desktop {
         margin-right: 35px;
         width: 93%;
         height: 144px;
     }
 
-    .card-populaire-eau {
-        width: 93%;
+    .Img-populaire {
+        width: 92px;
     }
 
-    .populaire-jaune .card-populaire .card-container .star-populaire-blanc {
+    .populaire-jaune .card-populaire-desktop .card-container .nom {
+        margin: 13px 14px 11px -6px;
+    }
+
+    .populaire-jaune .card-populaire-desktop .card-container .prix {
+        margin: 0px 13px 37px 2px;
+    }
+
+    .populaire-jaune .card-populaire-desktop .card-container .star-populaire-blanc {
         display: flex;
         flex-direction: row;
         margin-top: 4px;
     }
 
-    .populaire-jaune .card-populaire .card-container .star-populaire {
+    .populaire-jaune .card-populaire-desktop .card-container .star-populaire {
         display: flex;
         flex-direction: row;
         margin-top: 1px;
     }
 
-    .populaire-jaune .card-populaire .card-container .star-populaire-eau {
+    .populaire-jaune .card-populaire-desktop .card-container .star-populaire-eau {
         display: flex;
         flex-direction: row;
         margin-top: 4px;
@@ -717,8 +688,9 @@ i.fa-solid.fa-location-dot.fa-lg {
         margin-left: 20px;
     }
 
-    #next a {
-        margin-left: 20px;
+    footer {
+        width: 96%;
+        margin-left: 14px;
     }
 }
 
@@ -731,14 +703,8 @@ i.fa-solid.fa-location-dot.fa-lg {
         width: 93%;
     }
 
-    h5 {
-        margin-top: 3px;
-        margin-bottom: 36px;
-        width: 100%;
-        text-align: start;
-        margin-top: 10px;
-        margin-bottom: 5px;
-        margin-left: 60px;
+    nav {
+        flex-direction: column;
     }
 
     h1 {
@@ -746,74 +712,9 @@ i.fa-solid.fa-location-dot.fa-lg {
         text-align: center;
     }
 
-    .fa-circle-info {
-        margin-top: 5px;
+    .form {
+      justify-content:center;
     }
-
-    .lien1, .lien2, .lien3, .lien4 {
-        width: 30%;
-    }
-
-    #next {
-        display: none;
-    }
-
-    .activite .titre-activites {
-        padding-right: 160px;
-        margin-left: 15px;
-        margin-top: 28px;
-        width: 210px;
-        margin-bottom: 1px;
-    }
-
-    .card-container {
-        padding-left: 10px;
-        margin-left: 0px;
-    }
-
-    .main a {
-        width: 100%;
-    }
-
-    .liens-container {
-        justify-content: center;
-        gap: 20px;
-        margin-left: 10px;
-        width: 100%;
-    }
-
-    .lien4 {
-        gap: 15px;
-    }
-
-    nav {
-        flex-direction: column;
-    }
-
-    #header {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 96%;
-    }
-
-    .menu {
-        gap: 60px;
-    }
-
-        .menu a {
-            text-decoration: none;
-            color: black;
-            padding-bottom: 20px;
-            width: 120px;
-        }
-
-            .menu a:hover {
-                border-top: none;
-                border-bottom: 2px solid #0065FC;
-                padding-bottom: 18px;
-            }
 
     .rechercher {
         align-items: center;
@@ -843,21 +744,37 @@ i.fa-solid.fa-location-dot.fa-lg {
     }
 
     #lien-filtre {
-        justify-content: start;
-        width: 100%;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        height: 10px;
-        margin-right: 0px;
+        margin-left: 20px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+
+    .liens-container-gauche {
+        margin-left: 0px;
+        gap: 20px;
     }
 
     #info {
         margin-bottom: 20px;
     }
 
+    .main a {
+        width: 100%;
+    }
+
+.hebergement-rouge {
+   background-color:white;
+}
     .hebergement-vert {
         flex-direction: column-reverse;
         width: 100%;
+    }
+
+    .hebergement-bleu {
+        margin-top: 25px;
+        height: auto;
+        padding-bottom: 0px;
+        background-color:white;
     }
 
     .hebergement-jaune {
@@ -866,18 +783,17 @@ i.fa-solid.fa-location-dot.fa-lg {
         gap: 10px;
     }
 
-    .hebergement-bleu {
-        margin-top: 25px;
-        height: auto;
-        padding-bottom: 0px;
-    }
-
-    .hebergement-rouge {
-        gap: 0px;
-    }
-
     .card-hebergement {
         width: 100%;
+    }
+
+    #next {
+        display: none;
+    }
+
+    .populaire-rouge {
+        justify-content: center;
+        height: auto;
     }
 
     .populaire-jaune {
@@ -888,17 +804,7 @@ i.fa-solid.fa-location-dot.fa-lg {
         padding-left: 0px;
     }
 
-    .populaire-rouge {
-        justify-content: center;
-        height: auto;
-    }
-
-    .Img-populaire {
-        height: 125px;
-        width: 110px;
-    }
-
-    .card-populaire, card-populaire-eau, card-populaire-bleu {
+    .card-populaire-desktop, .card-populaire-eau, .card-populaire-bleu {
         width: 95%;
         margin-left: 15px;
     }
@@ -913,15 +819,13 @@ i.fa-solid.fa-location-dot.fa-lg {
         height: 194px;
     }
 
-    .activite .images-activite .card-activite .nom {
-        margin: 10px 0px 5px 12px;
-    }
-
     .images-activite .card-activite img {
-        object-fit: cover;
-        border-radius: 15px 15px 0px 0px;
         height: 136px;
         width: 90%;
+    }
+
+    .activite .images-activite .card-activite .nom {
+        margin: 10px 0px 5px 12px;
     }
 
     footer {
