modifié la barre recherche

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -131,29 +131,16 @@ input {
     width: 100%;
 }
 
-.liens-container-droit {
+.liens-container {
     display: flex;
     flex-direction: row;
     margin-left: 29px;
     gap: 40px;
 }
 
-    .liens-container-droit a {
+    .liens-container a {
         text-decoration: none;
         color: black;
-    }
-
-.liens-container-gauche {
-    display: flex;
-    flex-direction: row;
-    margin-left: 29px;
-    gap: 40px;
-}
-
-    .liens-container-gauche a {
-        text-decoration: none;
-        color: black;
-        margin-left: 5px;
     }
 
 #lien-filtre {
@@ -164,7 +151,7 @@ input {
     color: #000000;
 }
 
-.lien1, .lien2, .lien3 {
+.lien1, .lien2, .lien3,.lien4 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -179,29 +166,8 @@ input {
     font-weight: 700;
     font-size: 17px;
     line-height: 20px;
-    width: 30%;
+    width: 190px;;
 }
-
-.lien4 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border: 2px solid #E6E6E6;
-    border-radius: 20px 20px 20px 20px;
-    color: blue;
-    width: auto;
-    height: 48px;
-    border: 1px solid #D9D9D9;
-    padding-left: 21px;
-    padding-right: 20px;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 17px;
-    line-height: 20px;
-    width: 190px;
-}
-
     .lien1:hover, .lien2:hover, .lien3:hover, .lien4:hover {
         background-color: #DEEBFF;
     }
@@ -280,6 +246,7 @@ input {
 }
 
 .hebergement-jaune .card-hebergement .card-container .nom {
+    font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -591,15 +558,6 @@ i.fa-solid.fa-location-dot.fa-lg {
        /* gap:10px;*/
     }
 
-    .liens-container-gauche {
-        gap: 20px;
-    }
-
-    .liens-container-droit {
-        gap: 20px;
-        margin-left:0px;
-    }
-
     .hebergement-vert {
         flex-direction: column;
         width: 100%;
@@ -749,7 +707,7 @@ i.fa-solid.fa-location-dot.fa-lg {
         margin-bottom: 0px;
     }
 
-    .liens-container-gauche {
+    .liens-container {
         margin-left: 0px;
         gap: 20px;
     }
