--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,4 @@
 ﻿
-
-
 body {
     box-sizing: content-box;
     font-family: 'raleway', sans-serif;
@@ -83,7 +81,6 @@ h5 {
     display: flex;
     align-items: baseline;
     margin-top: 30px;
-    margin-bottom: 30px;
     gap: 15px;
     width: 100%
 }
@@ -118,49 +115,32 @@ input {
     display: none;
 }
 
-/*partie filtre*/
-.filtre {
+.filtres {
+    padding: 30px 0;
     display: flex;
-    flex-direction: row;
-    margin-bottom: 10px;
-    align-content: center;
-    width: 100%;
-}
-
-#info {
-    display: flex;
-    flex-direction: row;
-    font-weight: 400;
-    width: 100%;
-}
-
-.liens-container {
-    display: flex;
-    flex-direction: row;
-    margin-left: 29px;
-    gap: 40px;
-    width: 40%;
-}
-
-    .liens-container a {
-        text-decoration: none;
-        color: black;
-    }
-
-#lien-filtre {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 21px;
-    width: 5%;
-    color: #000000;
-}
-
-.lien1, .lien2, .lien3, .lien4 {
-    display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
-    gap: 10px;
+    justify-content: flex-start;
+    width:100%;
+}
+
+.filtres_list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.filtres_titre {
+    font-weight: 600;
+    margin-right: 30px;
+}
+
+.filtres_liens {
+    display: flex;
+    align-items: center;
+    margin-right: 25px;
+    margin-top: 10px;
     border-radius: 20px 20px 20px 20px;
     color: blue;
     height: 48px;
@@ -171,12 +151,24 @@ input {
     font-weight: 700;
     font-size: 17px;
     line-height: 20px;
-    width: 190px;
 }
 
-    .lien1:hover, .lien2:hover, .lien3:hover, .lien4:hover {
-        background-color: #DEEBFF;
-    }
+.filtres .filtres_list a {
+    text-decoration: none;
+    margin-left: 15px;
+    color: black;
+}
+
+.filtres_liens:hover {
+    background-color: #DEEBFF;
+}
+
+#info {
+    display: flex;
+    flex-direction: row;
+    font-weight: 400;
+    width: 100%;
+}
 
 .main {
     width: 95%;
@@ -545,8 +537,6 @@ i.fa-solid.fa-location-dot.fa-lg {
     }
 }
 
-
-
 /* sur les ecrans de 991px ou moins (tablette)*/
 @media screen and (max-width: 991px) {
 
@@ -564,12 +554,6 @@ i.fa-solid.fa-location-dot.fa-lg {
         margin: 0 0 0 0;
         gap: 30%;
         width: 100%;
-    }
-
-    .filtre {
-        margin-bottom: 0px;
-        width: 100%;
-        /* gap:10px;*/
     }
 
     .hebergement-vert {
@@ -707,6 +691,11 @@ i.fa-solid.fa-location-dot.fa-lg {
         text-align: center;
     }
 
+    h5 {
+        display: flex;
+        justify-content: center;
+    }
+
     .form {
         justify-content: center;
     }
@@ -729,24 +718,6 @@ i.fa-solid.fa-location-dot.fa-lg {
         justify-content: center;
         align-items: center;
         width: 49px;
-    }
-
-    .filtre {
-        flex-direction: column;
-        margin-bottom: 15px;
-        width: 100%;
-        gap: 20px;
-    }
-
-    #lien-filtre {
-        margin-left: 20px;
-        margin-top: 0px;
-        margin-bottom: 0px;
-    }
-
-    .liens-container {
-        margin-left: 0px;
-        gap: 20px;
     }
 
     #info {
