--- a/CSS/style.css
+++ b/CSS/style.css
@@ -770,6 +770,8 @@ i.fa-solid.fa-location-dot.fa-lg {
 
     .hebergement-rouge {
         background-color: white;
+        margin:0px;
+        padding-left:8px;
     }
 
     .hebergement-vert {
@@ -823,6 +825,7 @@ i.fa-solid.fa-location-dot.fa-lg {
     .images-activite {
         flex-direction: column;
         width: 100%;
+        margin:0px;
     }
 
     .card-activite {
