--- a/CSS/style.css
+++ b/CSS/style.css
@@ -783,8 +783,7 @@ i.fa-solid.fa-location-dot.fa-lg {
     .filtres_list {
         display: flex;
         flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
+        align-self:flex-start;
     }
 
     .hebergement-rouge {
