--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,6 +120,7 @@ input {
     display: none;
 }
 
+/*partie filtre*/
 .filtres {
     padding: 30px 0;
     display: flex;
@@ -191,7 +192,7 @@ input {
         line-height: 19px;
         margin-top: 10px;
     }
-
+/*partie hebergement*/
 .hebergement-vert {
     display: flex;
     flex-direction: row;
@@ -290,7 +291,7 @@ input {
 #next {
     margin-top: 0px;
 }
-
+/*partie populaire*/
 .populaire-rouge {
     display: flex;
     flex-direction: column;
@@ -387,7 +388,7 @@ input {
     flex-direction: row;
     margin: 26px 18px 7px 2px;
 }
-
+/*partie activité*/
 .activite {
     display: flex;
     flex-direction: column;
@@ -543,22 +544,6 @@ i.fa-solid.fa-location-dot.fa-lg {
 
 /* sur les ecrans de 991px ou moins (tablette)*/
 @media screen and (max-width: 991px) {
-
-    .filtres_titre {
-        font-weight: 600;
-        margin-right: 10px;
-    }
-
-    .filtres {
-        width: 110%;
-    }
-
-    .filtres_liens {
-        margin-right: 10px;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-
     body {
         margin: 5px;
         width: 100%;
@@ -574,7 +559,22 @@ i.fa-solid.fa-location-dot.fa-lg {
         gap: 30%;
         width: 100%;
     }
+/*partie filtre*/
+    .filtres_titre {
+        font-weight: 600;
+        margin-right: 10px;
+    }
 
+    .filtres {
+        width: 110%;
+    }
+
+    .filtres_liens {
+        margin-right: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+/*partie hébergement*/
     .hebergement-vert {
         flex-direction: column;
         width: 100%;
@@ -605,7 +605,7 @@ i.fa-solid.fa-location-dot.fa-lg {
     #next a {
         margin-left: 20px;
     }
-
+/*partie populaire*/
     .populaire-rouge {
         width: 97%;
         margin-top: 25px;
@@ -663,7 +663,7 @@ i.fa-solid.fa-location-dot.fa-lg {
         flex-direction: row;
         margin-top: 4px;
     }
-
+/*partie activité*/
     .images-activite .card-activite img {
         height: 227px;
     }
@@ -671,7 +671,7 @@ i.fa-solid.fa-location-dot.fa-lg {
     .images-activite {
         margin-left: 20px;
     }
-
+/*partie footer*/    
     footer {
         width: 95%;
         margin-left: 50px;
@@ -691,15 +691,7 @@ i.fa-solid.fa-location-dot.fa-lg {
         padding-left: 0px;
     }
 
-    .main {
-        padding-left: 0px;
-    }
-
-    .activite {
-        padding-left: 0px;
-        margin-top: 0px;
-    }
-
+/*partie menu*/
     nav {
         flex-direction: column;
         margin-top:10px;
@@ -740,7 +732,7 @@ i.fa-solid.fa-location-dot.fa-lg {
     .form {
         justify-content: center;
     }
-
+/*partie recherche*/
     .rechercher {
         align-items: center;
         justify-content: center;
@@ -765,10 +757,14 @@ i.fa-solid.fa-location-dot.fa-lg {
         margin-bottom: 20px;
     }
 
+    .main {
+        padding-left: 0px;
+    }
+
     .main a {
         width: 100%;
     }
-
+/*partie filtre*/
     .filtre-liens .fa-solid, .filtre-liens .fas {
         font-weight: 900;
         margin-left: -6px;
@@ -801,7 +797,7 @@ i.fa-solid.fa-location-dot.fa-lg {
         flex-wrap: wrap;
         align-self: flex-start;
     }
-
+/*partie hebergement*/
     .hebergement-rouge {
         background-color: white;
         margin: 0px;
@@ -837,7 +833,7 @@ i.fa-solid.fa-location-dot.fa-lg {
     #next {
         display: none;
     }
-
+/*partie populaire*/
     .populaire-rouge {
         justify-content: center;
         height: auto;
@@ -854,6 +850,11 @@ i.fa-solid.fa-location-dot.fa-lg {
     .card-populaire-desktop, .card-populaire-eau, .card-populaire-bleu {
         width: 95%;
         margin-left: 15px;
+    }
+/*partie activité*/
+    .activite {
+        padding-left: 0px;
+        margin-top: 0px;
     }
 
     .images-activite {
@@ -880,7 +881,7 @@ i.fa-solid.fa-location-dot.fa-lg {
     .activite .images-activite .card-activite .nom {
         margin: 2px 0px 5px 30px;
     }
-
+/*partie footer*/
     body > footer {
         flex-direction: column;
         align-items: start;
