--- a/CSS/style.css
+++ b/CSS/style.css
@@ -671,6 +671,10 @@ i.fa-solid.fa-location-dot.fa-lg {
     .images-activite {
         margin-left: 20px;
     }
+
+    .activite {
+        padding-left: 0px;
+    }
 /*partie footer*/    
     footer {
         width: 95%;
