--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,8 @@ body {
 }
 
 #header {
+    display:flex;
+    flex-direction:column;
     width: 96%;
     padding-left: 50px;
 }
@@ -795,7 +797,7 @@ i.fa-solid.fa-location-dot.fa-lg {
     }
 
         .filtres .filtres_list a {
-            margin-left: 15px;
+            margin-left: 6px;
             color: black;
             font-size: 11px;
         }
