--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,6 +124,8 @@ input {
 
 /*partie filtre*/
 .filtres {
+    display:flex;
+    flex-direction:row;
     padding: 30px 0;
     display: flex;
     flex-wrap: wrap;
@@ -194,6 +196,7 @@ input {
         line-height: 19px;
         margin-top: 10px;
     }
+
 /*partie hebergement*/
 .hebergement-vert {
     display: flex;
@@ -716,17 +719,16 @@ i.fa-solid.fa-location-dot.fa-lg {
 
         .menu a:hover {
             border-top: none;
-            border-bottom: 3px solid #0065FC;
+            border-bottom: 2px solid #0065FC;
             font-weight: 500;
             color: #0065FC;
             padding-bottom: 18px;
-            margin-bottom: -7px;
         }
 
     #menu-trait {
         display:inline-block;
         width: 100%;
-       margin-top:-2px;
+        margin-top:-2px;
     }
 
     h1 {
