--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,22 +1,24 @@
-﻿
-/*Desktop first*/
+﻿/*Desktop first*/
+
 body {
     box-sizing: content-box;
     font-family: 'raleway', sans-serif;
     max-width: 1400px;
     width: 97%;
     padding: 3px;
-   /* margin: auto;*/
+    /* margin: auto;*/
 }
 
 #header {
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     width: 96%;
     padding-left: 50px;
 }
 
+
 /*partie navigation*/
+
 nav {
     display: flex;
     flex-direction: row;
@@ -38,23 +40,23 @@ nav {
     color: #0065FC;
 }
 
-    .menu a {
-        text-decoration: none;
-        color: black;
-        padding-top: 50px;
-        width: 120px;
-        margin-top:-30px;
-    }
+.menu a {
+    text-decoration: none;
+    color: black;
+    padding-top: 50px;
+    width: 120px;
+    margin-top: -30px;
+}
 
-        .menu a:hover {
-            border-top: 2px solid #0065FC;
-            font-weight: 500;
-            color: #0065FC;
-            padding-top: 48px;
-        }
+.menu a:hover {
+    border-top: 2px solid #0065FC;
+    font-weight: 500;
+    color: #0065FC;
+    padding-top: 48px;
+}
 
 #menu-trait {
-    display:none;
+    display: none;
 }
 
 h1 {
@@ -76,6 +78,7 @@ h5 {
 
 
 /*partie recherche*/
+
 #fname {
     font-style: normal;
     font-weight: 700;
@@ -114,21 +117,23 @@ input {
     font-size: 18px;
     line-height: 21px;
     text-align: center;
-    border:none;
+    border: none;
     background-color: #0065FC;
     color: white;
     border-radius: 0px 15px 15px 0px;
     width: 132px;
 }
 
-i.fa-solid.fa-magnifying-glass{
-    display:none
+i.fa-solid.fa-magnifying-glass {
+    display: none
 }
 
+
 /*partie filtre*/
+
 .filtres {
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
     padding: 30px 0;
     display: flex;
     flex-wrap: wrap;
@@ -189,16 +194,18 @@ i.fa-solid.fa-magnifying-glass{
     padding-left: 50px;
 }
 
-    .main a {
-        text-decoration: none;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 19px;
-        margin-top: 10px;
-    }
+.main a {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    margin-top: 10px;
+}
+
 
 /*partie hebergement*/
+
 .hebergement-vert {
     display: flex;
     flex-direction: row;
@@ -297,7 +304,10 @@ i.fa-solid.fa-magnifying-glass{
 #next {
     margin-top: 0px;
 }
+
+
 /*partie populaire*/
+
 .populaire-rouge {
     display: flex;
     flex-direction: column;
@@ -394,7 +404,10 @@ i.fa-solid.fa-magnifying-glass{
     flex-direction: row;
     margin: 26px 18px 7px 2px;
 }
+
+
 /*partie activité*/
+
 .activite {
     display: flex;
     flex-direction: column;
@@ -409,15 +422,15 @@ i.fa-solid.fa-magnifying-glass{
     width: 99%;
 }
 
-    .images-activite .card-activite img {
-        object-fit: cover;
-        border-radius: 15px 15px 0px 0px;
-        width: 100%;
-        height: 302px;
-        margin-left: 16px;
-        margin-bottom: 12px;
-        box-shadow: 5px 10px #f0f2f6;
-    }
+.images-activite .card-activite img {
+    object-fit: cover;
+    border-radius: 15px 15px 0px 0px;
+    width: 100%;
+    height: 302px;
+    margin-left: 16px;
+    margin-bottom: 12px;
+    box-shadow: 5px 10px #f0f2f6;
+}
 
 .card-activite {
     width: 20%;
@@ -432,7 +445,9 @@ i.fa-solid.fa-magnifying-glass{
     color: black;
 }
 
+
 /*partie footer*/
+
 footer {
     display: flex;
     flex-direction: row;
@@ -445,9 +460,9 @@ footer {
     text-decoration: none;
 }
 
-    footer a {
-        color: black;
-    }
+footer a {
+    color: black;
+}
 
 .nom-footer {
     font-style: normal;
@@ -463,15 +478,15 @@ footer {
     width: 20%;
 }
 
-    .propos a {
-        text-decoration: none;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 19px;
-        margin-top: 10px;
-        width: 196px;
-    }
+.propos a {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    margin-top: 10px;
+    width: 196px;
+}
 
 .assistance {
     display: flex;
@@ -480,14 +495,14 @@ footer {
     width: 20%;
 }
 
-    .assistance a {
-        text-decoration: none;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 19px;
-        margin-top: 10px;
-    }
+.assistance a {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    margin-top: 10px;
+}
 
 .hebergement {
     display: flex;
@@ -496,16 +511,18 @@ footer {
     width: 20%;
 }
 
-    .hebergement a {
-        text-decoration: none;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 19px;
-        margin-top: 10px;
-    }
+.hebergement a {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    margin-top: 10px;
+}
+
 
 /*partie icones*/
+
 .fa-chart-line {
     padding-right: 20px;
     margin-top: 20px;
@@ -548,238 +565,205 @@ i.fa-solid.fa-location-dot.fa-lg {
     color: #0065FC;
 }
 
+
 /*Partie responsive du site*/
 
+
 /* sur les ecrans de 991px ou moins (tablette)*/
+
 @media screen and (max-width: 991px) {
     body {
         margin: 5px;
         width: 100%;
     }
-
     #header {
         width: 100%;
-        padding-left:0px;
+        padding-left: 0px;
     }
-
     .main {
-        padding-left:0px;
+        padding-left: 0px;
     }
-
     nav {
         justify-content: start;
         margin: 0 0 0 0;
         gap: 30%;
         width: 100%;
     }
-/*partie filtre*/
+    /*partie filtre*/
     .filtres_titre {
         font-weight: 600;
         margin-right: 10px;
     }
-
     .filtres {
         width: 110%;
     }
-
     .filtres_liens {
         margin-right: 10px;
         padding-left: 10px;
         padding-right: 10px;
     }
-/*partie hébergement*/
+    /*partie hébergement*/
     .hebergement-vert {
         flex-direction: column;
         width: 100%;
     }
-
     .hebergement-bleu {
         width: 97%;
         height: 625px;
         padding-bottom: 50px;
     }
-
     .hebergement-rouge {
         gap: 2px;
     }
-
     .hebergement-jaune {
         margin-bottom: 10px;
     }
-
-        .hebergement-jaune .card-hebergement .card-container .nom {
-            font-size: 13px;
-        }
-
+    .hebergement-jaune .card-hebergement .card-container .nom {
+        font-size: 13px;
+    }
     .card-container {
         margin-bottom: 32px;
     }
-
     #next a {
         margin-left: 20px;
     }
-/*partie populaire*/
+    /*partie populaire*/
     .populaire-rouge {
         width: 97%;
         margin-top: 25px;
         height: 300px;
     }
-
     .activite .titre-activites {
         margin-bottom: 40px;
     }
-
     .populaire-jaune {
         flex-direction: row;
         padding-bottom: 30px;
         width: 97%;
         margin-right: 14px;
     }
-
     .main a {
         text-decoration: none;
         width: 34%;
     }
-
     .card-populaire-desktop {
         margin-right: 35px;
         width: 93%;
         height: 144px;
     }
-
     .Img-populaire {
         width: 92px;
     }
-
     .populaire-jaune .card-populaire-desktop .card-container .nom {
         line-height: 13px;
     }
-
     .populaire-jaune .card-populaire-desktop .card-container .prix {
         margin: 0px 13px 21px 2px;
     }
-
     .populaire-jaune .card-populaire-desktop .card-container .star-populaire-blanc {
         display: flex;
         flex-direction: row;
         margin-top: 4px;
     }
-
     .populaire-jaune .card-populaire-desktop .card-container .star-populaire {
         display: flex;
         flex-direction: row;
         margin-top: 1px;
     }
-
     .populaire-jaune .card-populaire-desktop .card-container .star-populaire-eau {
         display: flex;
         flex-direction: row;
         margin-top: 4px;
     }
-/*partie activité*/
+    /*partie activité*/
     .images-activite .card-activite img {
         height: 227px;
     }
-
     .images-activite {
-       width:100%;
+        width: 100%;
     }
-
     .activite {
         padding-left: 0px;
     }
-/*partie footer*/    
+    /*partie footer*/
     footer {
         width: 95%;
-        margin-left:0px;
+        margin-left: 0px;
     }
 }
 
 
 /* sur les ecrans de 767px ou moins (mobile)*/
-@media screen and (max-width: 767px) {
 
+@media screen and (max-width: 767px) {
     body {
         width: 93%;
         margin: auto
     }
-
     #header {
         padding-left: 0px;
     }
-
-/*partie menu*/
+    /*partie menu*/
     nav {
         flex-direction: column;
-        margin-top:10px;
+        margin-top: 10px;
     }
-
     .menu a {
         text-decoration: none;
         color: black;
         padding-bottom: 20px;
         width: 160px;
     }
-
-        .menu a:hover {
-            border-top: none;
-            border-bottom: 3px solid #0065FC;
-            font-weight: 500;
-            color: #0065FC;
-            padding-bottom: 18px;
-        }
-
+    .menu a:hover {
+        border-top: none;
+        border-bottom: 3px solid #0065FC;
+        font-weight: 500;
+        color: #0065FC;
+        padding-bottom: 18px;
+    }
     #menu-trait {
-        display:inline-block;
+        display: inline-block;
         width: 90%;
-        margin-top:-2px;
+        margin-top: -2px;
     }
-
     i.fa-solid.fa-magnifying-glass {
-       display:inline;
+        display: inline;
     }
-
     #text {
         display: none;
     }
-
     h1 {
         margin-top: 22px;
         text-align: left;
     }
-
     h5 {
         display: flex;
         justify-content: left;
     }
-
     .form {
         justify-content: center;
     }
-/*partie recherche*/
+    /*partie recherche*/
     .rechercher {
         align-items: center;
         justify-content: center;
         width: 100%;
     }
-
     #info {
         margin-bottom: 20px;
     }
-
     .main {
         padding-left: 0px;
     }
-
     .main a {
         width: 100%;
     }
-/*partie filtre*/
-    .filtre-liens .fa-solid, .filtre-liens .fas {
+    /*partie filtre*/
+    .filtre-liens .fa-solid,
+    .filtre-liens .fas {
         font-weight: 900;
         margin-left: -6px;
     }
-
     .filtres_liens {
         flex: 1 0 35%;
         margin-right: 10px;
@@ -787,68 +771,57 @@ i.fa-solid.fa-location-dot.fa-lg {
         padding-right: 10px;
         font-size: 14px;
     }
-
     .liens-dog {
         flex: 0 0 40%;
     }
-
     .filtres {
         width: 100%;
     }
-
-        .filtres .filtres_list a {
-            margin-left: 6px;
-            color: black;
-            font-size: 11px;
-        }
-
+    .filtres .filtres_list a {
+        margin-left: 6px;
+        color: black;
+        font-size: 11px;
+    }
     .filtres_list {
         display: flex;
         flex-wrap: wrap;
         align-self: flex-start;
     }
-/*partie hebergement*/
+    /*partie hebergement*/
     .hebergement-rouge {
         background-color: white;
         margin: 0px;
         padding-left: 8px;
     }
-
     .hebergement-vert {
         flex-direction: column-reverse;
         width: 100%;
     }
-
     .hebergement-bleu {
         margin-top: 25px;
         height: auto;
         padding-bottom: 0px;
         background-color: white;
     }
-
     .hebergement-jaune .card-hebergement .card-container .nom {
         font-size: 16px;
     }
-
     .hebergement-jaune {
         flex-direction: column;
         height: auto;
         gap: 10px;
     }
-
     .card-hebergement {
         width: 100%;
     }
-
     #next {
         display: none;
     }
-/*partie populaire*/
+    /*partie populaire*/
     .populaire-rouge {
         justify-content: center;
         height: auto;
     }
-
     .populaire-jaune {
         flex-direction: column;
         align-items: center;
@@ -856,49 +829,44 @@ i.fa-solid.fa-location-dot.fa-lg {
         width: 100%;
         padding-left: 0px;
     }
-
-    .card-populaire-desktop, .card-populaire-eau, .card-populaire-bleu {
+    .card-populaire-desktop,
+    .card-populaire-eau,
+    .card-populaire-bleu {
         width: 95%;
         margin-left: 15px;
     }
-/*partie activité*/
+    /*partie activité*/
     .activite {
         padding-left: 0px;
         margin-top: 0px;
     }
-
     .images-activite {
         flex-direction: column;
         width: 100%;
         margin: 0px;
-        margin-top:-30px;
+        margin-top: -30px;
     }
-
     .card-activite {
         width: 100%;
         height: 194px;
     }
-
     .images-activite .card-activite img {
         height: 136px;
         width: 100%;
     }
-
     .activite .titre-activites {
-       width:110px;
+        width: 110px;
     }
-
     .activite .images-activite .card-activite .nom {
         margin: 2px 0px 5px 30px;
     }
-/*partie footer*/
-    body > footer {
+    /*partie footer*/
+    body>footer {
         flex-direction: column;
         align-items: start;
         gap: 30px;
         margin: auto;
     }
-
     .propos,
     .assistance,
     .hebergement {
